turtleart.polygon7.Polygon7.scala.error
Compilation error:
Polygon7:4: error: ')' expected but integer literal found.
    right(360./7.);
               ^