turtleart.polygon7.Polygon7.scala.code
override def run() {
  for (i<-0 to 6) {
    forward(80);
    right(360./7.);
  }
}